# docmind

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: config.py  deps.py  generation.py  limits.py  main.py  models.py  ratelimit.py
backend/app/agents/: multihop.py  router.py  table_qa.py
backend/app/evals/: golden_set.json  run_evals.py
backend/app/ingestion/: chunker.py  embedder.py  indexer.py  ocr.py  parser.py  vision.py
backend/app/retrieval/: cache.py  hybrid.py  rerank.py
backend/app/routers/: billing.py  chat.py  documents.py  health.py  metrics.py  workspaces.py
backend/app/services/: groq.py  supa.py
backend/tests/: test_chunker.py  test_health.py  test_indexer_rows.py  test_limits.py  test_ocr_vision.py  test_retrieval_helpers.py  test_router.py  test_rrf.py
docs/: PHASE_1.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/chat/: CitationPanel.tsx  Composer.tsx  MessageList.tsx
frontend/src/components/upload/: Dropzone.tsx  IngestStatusList.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  supabase.ts  types.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Metrics.tsx  Settings.tsx
infra/: 002_tsv_generated.sql  003_search_functions.sql  004_cache_and_usage.sql  005_metrics.sql  schema.sql
marketing/: linkedin-carousel.html  linkedin-post.md
