[project]
name = "docmind-backend"
version = "0.1.0"
description = "DocMind API — agentic document intelligence backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
